Fixed button text spacing issue on submit inputs.

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -18,6 +18,9 @@
     text-align: center;
     padding: 0;
   }
+  input[type='submit']{
+    padding: 0;
+  }
 }
 
 @media(max-width: 768px){}
